Fixed various UI bugs (#2189)
- Fixed role search bar being shown in the multi setups
- Fixed scaling of banner
- Fixed shrinking of pronouns
- Fixed users being in love with themselves
- Fixed comments being spaced out all the way at the bottom of the
profile
- Fixed misaligned nameplate in game messages

--- a/react_main/src/css/user.css
+++ b/react_main/src/css/user.css
@@ -192,8 +192,8 @@ iframe {
 }
 
 .profile .banner {
-  align-self: center;
-
+  aspect-ratio: 3;
+  height: auto;
   background-color: var(--theme-color-sec);
 }
 
